[package]
name = "rustor"
version = "0.1.0"
edition = "2021"

[dependencies]
x25519-dalek = { version = "2.0.1", features = ["serde"] }
actix-web = "4.8.0"
aes-gcm = { version = "0.10.3", features = ["std"] }
anyhow = "1.0.86"
bincode = "1.3.3"
const_format = "0.2.32"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["net"] }
clap = { version = "4.5.8", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.3"
if_chain = "1.0.2"
gerevs = "0.1.8"
